--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -5,5 +5,6 @@
 	{% include nav_projects.html %}
 	{{ content }}
 	{% include footer.html %}
+	{% include disqus_comment_count.html %}
 </body>
 </html>
