--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,6 +7,7 @@ layout: projects
 			<div class="col-lg-8 col-lg-offset-2 blog_title">
 				<h1>{{ page.title }}</h1>
 				<h3>{{ page.subtitle }}</h3>
+				<p>View this project on <a href="https://github.com/{{ site.author.github }}/{{ page.title }}">GitHub</a></p>
 			</div>
 			<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 blog_post">
 				{{ content }}
